--- a/app/src/main/res/drawable/buttonbackground.xml
+++ b/app/src/main/res/drawable/buttonbackground.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FF4C4C"
+    <solid android:color="@color/lift_lab_blue"
         >
 
     </solid>
