--- a/app/src/main/res/layout/exercise_view.xml
+++ b/app/src/main/res/layout/exercise_view.xml
@@ -9,9 +9,9 @@
         android:id="@+id/title_Excercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Exercise 1"
-        android:textSize="30dp"
-        android:textColor="@color/progress_red"
+        android:text="@string/title_exercise"
+        android:textSize="30sp"
+        android:textColor="@color/light_blue"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 
@@ -23,7 +23,7 @@
         android:layout_below="@id/title_Excercise"
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/logo_main" />
+        android:contentDescription="@string/exercise_picture_descr"/>
 
     <!-- Text 1 for the Set x Rep to do -->
     <TextView
@@ -32,7 +32,7 @@
         android:layout_height="33dp"
         android:layout_toEndOf="@id/imageView_Excercise"
         android:layout_below="@id/title_Excercise"
-        android:text="Text 1"
+        android:text="@string/text_setsxreps"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"/>
 
@@ -45,7 +45,7 @@
         android:layout_toEndOf="@id/imageView_Excercise"
         android:layout_below="@id/imageView_Excercise"
         android:layout_marginTop="-66dp"
-        android:text="Text 2"
+        android:text="@string/recovery_time"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"/>
 
@@ -57,7 +57,7 @@
         android:layout_toEndOf="@id/imageView_Excercise"
         android:layout_below="@id/imageView_Excercise"
         android:layout_marginTop="-33dp"
-        android:text="Text 3"
+        android:text="@string/kg_text"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"/>
 
@@ -68,7 +68,5 @@
         android:layout_below="@id/imageView_Excercise"
         android:layout_marginTop="2dp"
         android:background="@color/black"/>
-
-
 
 </RelativeLayout>
