--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:text="@string/weight_text"
-            android:textColor="@color/red_button"
+            android:textColor="@color/lift_lab_blue"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:text="@string/bmi_text"
-            android:textColor="@color/red_button"
+            android:textColor="@color/lift_lab_blue"
             android:textSize="30sp"
             android:textStyle="bold" />
 
