--- a/app/src/main/res/layout/activity_result_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_result_bmiactivity.xml
@@ -102,7 +102,7 @@
         android:layout_marginRight="20dp"
         android:progressDrawable="@drawable/progress_drawable"
         android:max="40"
-        android:thumb="@drawable/thumb_red">
+        android:thumb="@drawable/thumb_blue">
 
     </SeekBar>
 
@@ -146,7 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="@string/select_which_workout_plan_you_want_to_do"
-            android:textColor="@color/white"
+            android:textColor="@color/light_blue"
             android:textSize="19sp"
             android:textStyle="bold">
 
