--- a/app/src/main/res/layout/activity_food_workout_tips.xml
+++ b/app/src/main/res/layout/activity_food_workout_tips.xml
@@ -6,4 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".Food_Workout_Tips">
 
+    <LinearLayout
+        android:id="@+id/buttonsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:gravity="center"
+            android:text="FOOD AND WORKOUT TIPS"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/phrase"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:gravity="center"
+            android:text="Unlock Your Fitness Journey: Tailored Tips for Cutting, Maintaining, and Bulking Up!" />
+
+        <Button
+            android:id="@+id/bulkButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="BULK" />
+
+        <Button
+            android:id="@+id/maintenanceButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MAINTENANCE" />
+
+        <Button
+            android:id="@+id/cutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CUT" />
+
+        <View
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/food_workout_tips_intro"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
