--- a/app/src/main/res/layout/activity_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_bmiactivity.xml
@@ -303,6 +303,49 @@
             android:layout_centerInParent="true"
             android:textColor="@color/white" />
 
+        <!--Minus icon-->
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/plusminus"
+            android:layout_marginBottom="65dp">
+
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/minus"
+                android:id="@+id/decrement_height"
+                android:contentDescription="@string/minus_icon_descr">
+
+            </ImageView>
+
+        </RelativeLayout>
+
+        <!--Plus icon-->
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="20dp"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/plusminus"
+            android:layout_marginBottom="65dp">
+
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/add"
+                android:id="@+id/increment_height"
+                android:contentDescription="@string/plus_icon_descr">
+
+            </ImageView>
+
+        </RelativeLayout>
+
         <!--SeekBar created-->
         <SeekBar
             android:layout_width="match_parent"
