--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,8 @@
             android:text="@string/BMI_CALCULATOR"
             android:textSize="20sp"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/lift_lab_blue"/>
+            app:backgroundTint="@color/lift_lab_blue"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button5"
@@ -82,7 +83,8 @@
             android:textSize="20sp"
             android:onClick="openWorkoutSelectionPage"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/lift_lab_blue"/>
+            app:backgroundTint="@color/lift_lab_blue"
+            android:textColor="@color/white"/>
 
     </RelativeLayout>
 
@@ -121,7 +123,8 @@
             android:textSize="20sp"
             android:onClick="openPreviousBMIData"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/lift_lab_blue"/>
+            app:backgroundTint="@color/lift_lab_blue"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button2"
@@ -135,7 +138,8 @@
             android:textSize="20sp"
             android:onClick="openGraph"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/lift_lab_blue"/>
+            app:backgroundTint="@color/lift_lab_blue"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button8"
@@ -148,7 +152,8 @@
             android:textSize="20sp"
             app:cornerRadius="10dp"
             app:backgroundTint="@color/lift_lab_blue"
-            android:onClick="openFoodWorkoutTips"/>
+            android:onClick="openFoodWorkoutTips"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/button9"
@@ -162,7 +167,9 @@
             android:textSize="20sp"
             android:onClick="openSetTargetActivity"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/lift_lab_blue"/>
+            app:backgroundTint="@color/lift_lab_blue"
+            android:textColor="@color/white"/>
+
     </RelativeLayout>
 
 </RelativeLayout>
